--- a/Pipfile
+++ b/Pipfile
@@ -9,9 +9,13 @@ dnspython = "*"
 
 [dev-packages]
 black = "*"
+twine = "*"
 
 [requires]
 python_version = "3.10"
 
 [pipenv]
 allow_prereleases = true
+
+[scripts]
+build = 'python setup.py bdist_wheel'
