--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 description = "Friendly fork of pyLibravatar for async support."
 authors = ["baseplate-admin"]
 license = "MIT"
-readme = "README.md"
+readme = "README.rst"
+packages = [{include = "libravatar"}]
 
 [tool.poetry.dependencies]
 python = "^3.8"
